refactoring, started 1.8.0-SNAPSHOT